added some codes

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     </style>
 
     <script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
-    <script src="js/jzoom.js"></script>
+    <script src="assets/js/jzoom.js"></script>
 </head>
 
 <body>
 
 
     <div class="jzoom">
-        <img src="1.jpg" height="350" width="350">
+        <img src="assets/img/1.jpg" height="350" width="350">
     </div>
     
     <script>
